--- a/package.json
+++ b/package.json
@@ -1,33 +1,40 @@
 {
-  "name": "hamantdotnet",
-  "version": "0.0.0",
-  "dependencies": {},
-  "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-coffee": "~0.7.0",
-    "grunt-contrib-uglify": "~0.2.0",
-    "grunt-contrib-compass": "~0.3.0",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-cssmin": "~0.6.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-htmlmin": "~0.1.3",
-    "grunt-contrib-imagemin": "~0.1.4",
-    "grunt-contrib-watch": "~0.4.0",
-    "grunt-usemin": "~0.1.11",
-    "grunt-svgmin": "~0.2.0",
-    "grunt-rev": "~0.1.0",
-    "grunt-open": "~0.2.0",
-    "grunt-concurrent": "~0.3.0",
-    "matchdep": "~0.1.2",
-    "connect-livereload": "~0.2.0",
-    "grunt-google-cdn": "~0.2.0",
-    "grunt-ngmin": "~0.0.2"
+  "name": "hamant.net",
+  "version": "0.2.0",
+  "private": true,
+  "description": "personal website for Chris Hamant chris@hamant.net",
+  "main": "index.js",
+  "scripts": {
+    "test": "test"
   },
-  "engines": {
-    "node": ">=0.8.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chrishamant/hamant.net.git"
+  },
+  "keywords": [
+    "blog"
+  ],
+  "author": "Chris Hamant chris@hamant.net",
+  "license": "BSD",
+  "bugs": {
+    "url": "https://github.com/chrishamant/hamant.net/issues"
+  },
+  "homepage": "https://github.com/chrishamant/hamant.net",
+  "dependencies": {
+    "metalsmith": "^0.5.0",
+    "jade": "^1.3.0",
+    "async": "^0.2.10",
+    "stylus": "^0.42.3",
+    "nib": "^1.0.2",
+    "browserify": "^3.33.1",
+    "moment": "^2.5.1",
+    "metalsmith-drafts": "0.0.1",
+    "metalsmith-collections": "^0.4.0",
+    "marked": "^0.3.2",
+    "lodash": "^2.4.1",
+    "normalize.css": "^3.0.1",
+    "d3": "^3.4.5",
+    "restify": "^2.7.0",
+    "bunyan": "^0.22.2"
   }
 }
-
